--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "axios": "^1.2.1",
     "fontawesome": "^5.6.3",
     "leaflet": "^1.9.2",
     "leaflet-easybutton": "^2.4.0",
